Fixed bar graph

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,10 +77,10 @@ $(function () {
             type: 'column'
         },
         title: {
-            text: 'Monthly Average Rainfall'
+            text: 'Whats the best time to see Oliver?'
         },
         subtitle: {
-            text: 'Source: WorldClimate.com'
+            text: 'Source: Camera'
         },
         xAxis: {
             categories: [
@@ -90,7 +90,7 @@ $(function () {
         yAxis: {
             min: 0,
             title: {
-                text: 'Rainfall (mm)'
+                text: 'Probability of appearance'
             }
         },
         tooltip: {
