--- a/templates/index.html
+++ b/templates/index.html
@@ -39,9 +39,15 @@
 
   <hr>
 
-   <div id='main'>
-
- <img src='/static/image_stream.jpg' width="100%"/>
+  <div class="row">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+        <div id='main'>
+        <img src='/static/image_stream.jpg' width="100%"/>
+        </div>
+  </div>
+  <div class="col-md-2"></div>
+ 
  </div>
 
  <div id='test'>
