Fixed chart a little more

--- a/templates/index.html
+++ b/templates/index.html
@@ -73,9 +73,15 @@ if (data['result'].newimage == true) {
 </p>
 </div>
 
-
+ <div class="row">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
 <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-
+  </div>
+  <div class="col-md-2"></div>
+ 
+ </div>
+ 
 <script>
 $(function () {
     $('#container').highcharts({
@@ -109,7 +115,7 @@ $(function () {
         },
         plotOptions: {
             column: {
-                pointPadding: 0.2,
+                pointPadding: 0,
                 borderWidth: 0
             }
         },
