--- a/templates/index.html
+++ b/templates/index.html
@@ -49,9 +49,9 @@
   <h1 class="text-center">Oliver the Cat TV
     <small>Powered by PI</small>
   </h1>
+<h3 class="text-center" id='num_connected'>Currently 1 connected</h3>
 
 
-<hr>
 
   <hr>
 
@@ -69,26 +69,28 @@
  <div id='test'>
 <p>
 <script>
+var myUnique = Math.floor((Math.random() * 100000)+1)
 var myVar=setInterval(function(){get_image()},1000);
 
 function get_image() {
     $.ajax({
     type: 'GET',
     cache: false,
-    url: '/img',
+    url: '/img?uuid='+myUnique,
     success: function(data) {
 var d = new Date();
 console.log(data);
 if (data['result'].newimage == true) {
     $('#main img').attr('src', data['result'].src);
 }
+$('#num_connected').text("Currently " + data['result'].connected + " connected.")
     }
     });
 }
 </script>
 </p>
 </div>
-
+<hr>
  <div class="row">
   <div class="col-md-2"></div>
   <div class="col-md-8">
